--- a/2016/18-05-FEniCS-nwp-multigrid.tex
+++ b/2016/18-05-FEniCS-nwp-multigrid.tex
@@ -153,7 +153,7 @@
 \begin{frame}
   \frametitle{Discretised system}
   After discretising in space and time we obtain a linear operator for
-  $u \subset H(\div)$, $p \subset L^2$, $b$ scalar, collocated with
+  $u \in H(\div)$, $p \in L^2$, $b$ scalar, collocated with
   vertical part of $u$ space.
 \begin{equation*}
 \begin{pmatrix}
